<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/logout_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/logout_description"
        android:textColor="@color/black" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCancel"
            android:layout_marginEnd="30dp"
            style="@style/CardViewButtonStyle">

            <TextView
                style="@style/CardViewTextButtonStyle"
                android:text="@string/cancel" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLogout"
            style="@style/CardViewButtonStyle">

            <TextView
                style="@style/CardViewTextButtonStyle"
                android:text="@string/logout" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>